--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +20,20 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+@theme{
+  --color-primary-yellow: #edeece;
+  --color-primary-blue: #122a5b;
+  --color-dark-green: #117640;
+  --color-medium-yellow: #f9bc52;
+}
+
+@theme{
+  --font-primary: "Helvetica Neue", sans-serif;
+}
+
+@font-face {
+  font-family: "Helvetica Neue";
+  src: url("/fonts/helvetica-neue/HelveticaNeueMedium.otf") format("opentype");
 }
