HeroSection added, Navbar updated

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,7 @@ body {
   font-family: "Helvetica Neue";
   src: url("/fonts/helvetica-neue/HelveticaNeueMedium.otf") format("opentype");
 }
+
+@theme{
+  --breakpoint-xs: 500px;
+}
